--- a/frontend/src/components/More/Infoline.css
+++ b/frontend/src/components/More/Infoline.css
@@ -8,7 +8,7 @@
     opacity: 0.5;
 }
 
-.image-for-infoline {
+.image-for-infoline-roche {
     position: fixed;
     top: 49%;
     left: 600px;
@@ -19,7 +19,7 @@
     text-align: center;
 }
 
-.image-for-infoline2 {
+.image-for-infoline-ascensia {
     position: fixed;
     top: 50%;
     left: 600px;
@@ -30,7 +30,7 @@
     text-align: center;
 }
 
-.image-for-infoline3 {
+.image-for-infoline-abbott {
     position: fixed;
     top: 51%;
     left: 600px;
@@ -41,7 +41,7 @@
     text-align: center;
 }
 
-.image-for-infoline4 {
+.image-for-infoline-lifescan {
     position: fixed;
     top: 52%;
     left: 600px;
@@ -52,7 +52,7 @@
     text-align: center;
 }
 
-.image-for-infoline5 {
+.image-for-infoline-medtronic {
     position: fixed;
     top: 67%;
     left: 600px;
@@ -63,7 +63,7 @@
     text-align: center;
 }
 
-.image-for-infoline6 {
+.image-for-infoline-bioton {
     position: fixed;
     top: 81%;
     left: 600px;
@@ -74,7 +74,7 @@
     text-align: center;
 }
 
-.infoline-photo {
+.infoline-photo-roche {
     height: 50px;
     width: 50px;
     position:relative;
@@ -86,7 +86,7 @@
     opacity: 1;
   }
 
-  .infoline-photo2 {
+  .infoline-photo-ascensia {
     height: 50px;
     width: 50px;
     position:relative;
@@ -98,7 +98,7 @@
     opacity: 1;
   }
 
-  .infoline-photo3 {
+  .infoline-photo-abbott {
     height: 50px;
     width: 50px;
     position:relative;
@@ -110,7 +110,7 @@
     opacity: 1;
   }
 
-  .infoline-photo4 {
+  .infoline-photo-lifescan {
     height: 50px;
     width: 50px;
     position:relative;
@@ -122,7 +122,7 @@
     opacity: 1;
   }
 
-  .infoline-photo5 {
+  .infoline-photo-medtronic {
     height: 50px;
     width: 50px;
     position:relative;
@@ -134,7 +134,7 @@
     opacity: 1;
   }
 
-  .infoline-photo6 {
+  .infoline-photo-bioton {
     height: 50px;
     width: 50px;
     position:relative;
@@ -146,7 +146,7 @@
     opacity: 1;
   }
 
-  .image__description-infoline {
+  .image__description-infoline-roche {
     font-size: 1.5em;
     margin-top: 2.5em;
     margin-left: 0.2em;
@@ -159,7 +159,7 @@
     bottom: 200px;
   }
 
-  .image__description-infoline2 {
+  .image__description-infoline-ascensia {
     font-size: 1.5em;
     margin-top: 2.5em;
     margin-left: 0.2em;
@@ -172,7 +172,7 @@
     bottom: 200px;
   }
 
-  .image__description-infoline3 {
+  .image__description-infoline-abbott {
     font-size: 1.5em;
     margin-top: 2.5em;
     margin-left: 0.2em;
@@ -185,7 +185,7 @@
     bottom: 180px;
   }
 
-  .image__description-infoline4 {
+  .image__description-infoline-lifescan {
     font-size: 1.5em;
     margin-top: 2.5em;
     margin-left: 0.2em;
@@ -198,7 +198,7 @@
     bottom: 130px;
   }
 
-  .image__description-infoline5 {
+  .image__description-infoline-medtronic {
     font-size: 1.5em;
     margin-top: 2.5em;
     margin-left: 0.2em;
@@ -211,7 +211,7 @@
     bottom: 130px;
   }
 
-  .image__description-infoline6 {
+  .image__description-infoline-bioton {
     font-size: 1.5em;
     margin-top: 2.5em;
     margin-left: 0.2em;
