--- a/frontend/src/components/AboutDiabetes/Basics.css
+++ b/frontend/src/components/AboutDiabetes/Basics.css
@@ -9,35 +9,65 @@
 }
 
 .h2-basic {
-    color: white;
-    position: relative;
-    left: 800px;
-    text-shadow: .1em .2em .1em hsl(200 50% 30%);
+	position: relative;
+	perspective: 500px;
+	top: 10%;
+	transform: translateY(-50%);
+    font-family: 'Muli';
+    font-style: normal;
+    font-weight: 400;
     font-size: 20px;
-    font-weight: 800;
-    font-family: 'Raleway',sans-serif;
-    color: #ffffff;
-    align-items: center;
-    top: 60px;
-}
-
-.h2-basic::after {
-    position: absolute;
-    width: 10%;
-    top: 120%;
-    left: 4.5%;
-    margin-left: -5.5%;
-    content: '';
-    border-bottom: 2px solid #ffffff;
 }
 
  .p-basic {
-    top: 45px;
     position: relative;
-    margin-top: 5.25em;
-    margin-left: 300px;
-    margin-right: 300px;
-    color: black;
+    color: rgb(255, 255, 255);
     font-weight: 100;
-    font-size: 1.15em;
+    font-size: 1.30em;
+    top: 100px;
  }
+
+ .box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1400px;
+    height: 700px;
+    background: #111845a6;
+    box-sizing: border-box;
+    overflow: hidden;
+    box-shadow: 0 20px 50px rgb(23, 32, 90);
+    border: 2px solid #2a3cad;
+    color: white;
+    padding: 20px;
+ }
+
+ .box:before {
+    content: '';
+    position:absolute;
+    top:0;
+    left:-100%;
+    width:100%;
+    height:100%;
+    background: rgba(255,255,255,0.1);
+    transition:0.6s;
+    pointer-events: none;
+  }
+
+  .box:hover:before {
+    left:-50%;
+    transform: skewX(-5deg);
+  }
+
+  .box .content {
+    position:absolute;
+    top:15px;
+    left:15px;
+    right:15px;
+    bottom:15px;
+    border:1px solid #08e1e9;
+    padding:20px;
+    text-align:center;
+    box-shadow: 0 5px 10px rgba(9,0,0,0.5);
+  }
