--- a/frontend/src/components/AboutDiabetes/Basics.css
+++ b/frontend/src/components/AboutDiabetes/Basics.css
@@ -11,20 +11,20 @@
 .h2-basic {
 	position: relative;
 	perspective: 500px;
-	top: 10%;
+	top: 3%;
 	transform: translateY(-50%);
-    font-family: 'Muli';
-    font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 24px;
 }
 
  .p-basic {
     position: relative;
     color: rgb(255, 255, 255);
     font-weight: 100;
-    font-size: 1.30em;
-    top: 100px;
+    font-size: 1.45em;
+    top: 15px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 30px;
  }
 
  .box {
