--- a/frontend/src/components/HeaderComp.css
+++ b/frontend/src/components/HeaderComp.css
@@ -1,12 +1,13 @@
 .header {
-  background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
+  background: rgb(0, 0, 0);
+  opacity: 0.85;
   height: 50px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 2;
-  position: sticky;
+  position: fixed;
   top: 0;    
   z-index: 2;
 }
