--- a/frontend/src/components/HeaderComp.css
+++ b/frontend/src/components/HeaderComp.css
@@ -77,53 +77,49 @@
 
 
   .header-button {
-    width: 110px;
-    height: 35px;
     position: relative;
-    right: 520px;
-    font-size: 14px;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-    border: none;
-    background-size: 200% 100%;
-    border-radius: 20px;
+    right: 450px;
+    display: inline-block;
+    padding: 0.5em 1.7em;
+    margin: 0 0.1em 0.1em 0;
+    border: 0.16em solid rgb(255, 255, 255);
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color: #ffffff;
+    text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
+    text-align: center;
+    background-color: black;
+    transition: all 0.4s;
   }
-  
+
   .header-button:hover {
-    background-position: 100% 0;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-  }
-  
-  .header-button:focus {
-    outline: none;
-  }
-  
-  .header-button.btn {
-    background-image: linear-gradient(
-      to right,
-      #25aae1,
-      #4481eb,
-      #04befe,
-      #3f86ed
-    );
-    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+    color: black;
+    background-color: rgb(255, 255, 255);
   }
 
   .header-button-calc {
-    width: 110px;
-    height: 35px;
     position: relative;
-    right: 210px;
-    font-size: 14px;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-    border: none;
-    background-size: 200% 100%;
-    border-radius: 20px;
+    right: 100px;
+    display: inline-block;
+    padding: 0.5em 1.7em;
+    margin: 0 0.1em 0.1em 0;
+    border: 0.16em solid rgb(255, 255, 255);
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color: #ffffff;
+    text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
+    text-align: center;
+    background-color: black;
+    transition: all 0.4s;
+  }
+
+  .header-button-calc:hover {
+    color: black;
+    background-color: rgb(255, 255, 255);
   }
   
   .header-button-calc:hover {
