--- a/frontend/src/components/HeaderComp.css
+++ b/frontend/src/components/HeaderComp.css
@@ -78,7 +78,7 @@
 
   .header-button {
     position: relative;
-    right: 450px;
+    right: 500px;
     display: inline-block;
     padding: 0.5em 1.7em;
     margin: 0 0.1em 0.1em 0;
@@ -91,7 +91,8 @@
     text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
     text-align: center;
     background-color: black;
-    transition: all 0.4s;
+    transition: all 0.5s;
+    border-radius: 2em;
   }
 
   .header-button:hover {
@@ -101,7 +102,7 @@
 
   .header-button-calc {
     position: relative;
-    right: 100px;
+    right: 150px;
     display: inline-block;
     padding: 0.5em 1.7em;
     margin: 0 0.1em 0.1em 0;
@@ -114,106 +115,61 @@
     text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
     text-align: center;
     background-color: black;
-    transition: all 0.4s;
+    transition: all 0.5s;
+    border-radius: 2em;
   }
 
   .header-button-calc:hover {
     color: black;
     background-color: rgb(255, 255, 255);
   }
-  
-  .header-button-calc:hover {
-    background-position: 100% 0;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-  }
-  
-  .header-button-calc:focus {
-    outline: none;
-  }
-  
-  .header-button-calc.btn {
-    background-image: linear-gradient(
-      to right,
-      #25aae1,
-      #4481eb,
-      #04befe,
-      #3f86ed
-    );
-    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
-  }
 
   .header-button-login {
-    width: 110px;
-    height: 35px;
     position: relative;
-    right: 40px;
-    font-size: 14px;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-    border: none;
-    background-size: 200% 100%;
-    border-radius: 20px;
+    right: 30px;
+    display: inline-block;
+    padding: 0.5em 1.7em;
+    margin: 0 0.1em 0.1em 0;
+    border: 0.16em solid rgb(255, 255, 255);
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color: #ffffff;
+    text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
+    text-align: center;
+    background-color: black;
+    transition: all 0.5s;
+    border-radius: 2em;
   }
 
   .header-button-login:hover {
-    background-position: 100% 0;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-  }
-  
-  .header-button-login:focus {
-    outline: none;
-  }
-  
-  .header-button-login.btn {
-    background-image: linear-gradient(
-      to right,
-      #25aae1,
-      #4481eb,
-      #04befe,
-      #3f86ed
-    );
-    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+    color: black;
+    background-color: rgb(255, 255, 255);
   }
 
   .header-button-registration {
-    width: 110px;
-    height: 35px;
     position: relative;
     right: 20px;
-    font-size: 14px;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-    border: none;
-    background-size: 200% 100%;
-    border-radius: 20px;
+    display: inline-block;
+    padding: 0.5em 1.7em;
+    margin: 0 0.1em 0.1em 0;
+    border: 0.16em solid rgb(255, 255, 255);
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color: #ffffff;
+    text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
+    text-align: center;
+    background-color: black;
+    transition: all 0.5s;
+    border-radius: 2em;
   }
 
   .header-button-registration:hover {
-    background-position: 100% 0;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-  }
-  
-  .header-button-registration:focus {
-    outline: none;
-  }
-  
-  .header-button-registration.btn {
-    background-image: linear-gradient(
-      to right,
-      #25aae1,
-      #4481eb,
-      #04befe,
-      #3f86ed
-    );
-    box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+    color: black;
+    background-color: rgb(255, 255, 255);
   }
 
   @media screen and (max-width: 900px) {
