--- a/frontend/src/components/HeaderComp.css
+++ b/frontend/src/components/HeaderComp.css
@@ -21,16 +21,11 @@
   color: white;
   text-decoration: none;
   text-align:center;
-  font-family: 'Muli', sans-serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   font-weight: 500;
   align-items: center;
-  background-image: linear-gradient(
-      to right,
-      #54b3d6,
-      #54b3d6 50%,
-      #fff 50%
-    );
+  background-color: white;
   background-size: 200% 100%;
   background-position: -100%;
   display: inline-block;
@@ -42,7 +37,7 @@
 
   .header-links::before {
   content: '';
-  background: #54b3d6;
+  background: #ffffff;
   display: block;
   position: absolute;
   bottom: -3px;
@@ -174,66 +169,92 @@
 
   @media screen and (max-width: 900px) {
 
+    .header-button-registration:hover {
+      color: black;
+      background-color: rgb(255, 255, 255);
+    }
+
     .header-button-registration {
-      width: 70px;
-      height: 35px;
       position: relative;
-      right: 5px;
-      font-size: 11px;
-      font-weight: 600;
-      color: #fff;
-      cursor: pointer;
-      border: none;
-      background-size: 200% 100%;
-      border-radius: 20px;
+      right: 10px;
+      display: inline-block;
+      padding: 0.4em 0.5em;
+      margin: 0 0.1em 0.1em 0;
+      border: 0.16em solid rgb(255, 255, 255);
+      box-sizing: border-box;
+      text-decoration: none;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400;
+      color: #ffffff;
+      text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
+      text-align: center;
+      background-color: black;
+      transition: all 0.5s;
+      border-radius: 2em;
     }
 
     .header-button-login {
-      width: 70px;
-      height: 35px;
       position: relative;
-      right: 10px;
-      font-size: 11px;
-      font-weight: 600;
-      color: #fff;
-      cursor: pointer;
-      border: none;
-      background-size: 200% 100%;
-      border-radius: 20px;
+      right: 15px;
+      display: inline-block;
+      padding: 0.4em 0.5em;
+      margin: 0 0.1em 0.1em 0;
+      border: 0.16em solid rgb(255, 255, 255);
+      box-sizing: border-box;
+      text-decoration: none;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400;
+      color: #ffffff;
+      text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
+      text-align: center;
+      background-color: black;
+      transition: all 0.5s;
+      border-radius: 2em;
     }
 
+
     .header-button-calc {
-      width: 70px;
-      height: 35px;
       position: relative;
-      right: 0px;
-      font-size: 11px;
-      font-weight: 600;
-      color: #fff;
-      cursor: pointer;
-      border: none;
-      background-size: 200% 100%;
-      border-radius: 20px;
+      right: -30px;
+      display: inline-block;
+      padding: 0.4em 0.5em;
+      margin: 0 0.1em 0.1em 0;
+      border: 0.16em solid rgb(255, 255, 255);
+      box-sizing: border-box;
+      text-decoration: none;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400;
+      color: #ffffff;
+      text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
+      text-align: center;
+      background-color: black;
+      transition: all 0.5s;
+      border-radius: 2em;
     }
 
     .header-button {
-      width: 70px;
-      height: 35px;
       position: relative;
-      right: 170px;
-      font-size: 11px;
-      font-weight: 600;
-      color: #fff;
-      cursor: pointer;
-      border: none;
-      background-size: 200% 100%;
-      border-radius: 20px;
+      right: 150px;
+      display: inline-block;
+      padding: 0.4em 0.5em;
+      margin: 0 0.1em 0.1em 0;
+      border: 0.16em solid rgb(255, 255, 255);
+      box-sizing: border-box;
+      text-decoration: none;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400;
+      color: #ffffff;
+      text-shadow: 0 0.04em 0.04em rgba(255, 255, 255, 0.253);
+      text-align: center;
+      background-color: black;
+      transition: all 0.5s;
+      border-radius: 2em;
     }
 
     .header-menu {
       display: grid;
       grid-template-columns: repeat(5, auto);
-      grid-gap: 30px;
+      grid-gap: 35px;
       width: 90vw;
       justify-content: end;
       margin-right: 7rem;
@@ -248,16 +269,12 @@
       font-weight: 500;
       font-size: 15px;
       align-items: center;
-      background-image: linear-gradient(
-        to right,
-        #54b3d6,
-        #54b3d6 50%,
-        #fff 50%
-      );
+      background-color: white;
       background-size: 200% 100%;
       background-position: -100%;
       display: inline-block;
       position: relative;
+      left: 20px;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       transition: all 0.3s ease-in-out;
