--- a/frontend/src/components/SlideMenu/MoveDownAdvices.css
+++ b/frontend/src/components/SlideMenu/MoveDownAdvices.css
@@ -1,9 +1,9 @@
 .movedown-menu-advices {
-  background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
+    background: rgb(0, 0, 0);
     width: 100px;
     position: absolute;
     top: 50px;
-    right: 1105px;
+    right: 1125px;
     list-style: none;
     text-align: center;
     border-bottom-right-radius: 5px;
@@ -30,11 +30,11 @@
 
   @media screen and (max-width: 960px) {
     .movedown-menu-advices {
-        background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
+        background: rgb(0, 0, 0);
         position: absolute;
         width: 80px;
         top: 50px;
-        right: 480px;
+        right: 515px;
         list-style: none;
         text-align: center;
         border-bottom-right-radius: 5px;
