--- a/frontend/src/components/SlideMenu/MoveDownDiabetes.css
+++ b/frontend/src/components/SlideMenu/MoveDownDiabetes.css
@@ -1,9 +1,9 @@
 .movedown-menu-diabetes {
-  background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
+    background: rgb(0, 0, 0);
     width: 110px;
     position: absolute;
     top: 50px;
-    right: 1455px;
+    right: 1470px;
     list-style: none;
     text-align: center;
     border-bottom-right-radius: 5px;
@@ -30,11 +30,11 @@
 
   @media screen and (max-width: 960px) {
     .movedown-menu-diabetes {
-        background: -webkit-linear-gradient(90deg, rgb(12, 52, 182) 5%,rgb(17, 199, 255) 100%);
+        background: rgb(0, 0, 0);
         position: absolute;
         width: 85px;
         top: 50px;
-        right: 645px;
+        right: 685px;
         list-style: none;
         text-align: center;
         border-bottom-right-radius: 5px;
