I made text looks smooth

--- a/frontend/src/components/HeaderComp.css
+++ b/frontend/src/components/HeaderComp.css
@@ -32,6 +32,10 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   transition: all 0.3s ease-in-out;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  -webkit-tap-highlight-color: transparent;
   }
 
   .header-links::before {
