I'm changing body page

--- a/frontend/src/components/Home/Body.css
+++ b/frontend/src/components/Home/Body.css
@@ -5,12 +5,12 @@
   position: fixed;
   z-index: -1;
   display: flex;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .cards-image-information {
   background-color: rgba(0,0,0, 0.4);
-  border: 4px solid #25aae1;
+  border: 4px solid #000000;
   position: fixed;
   top: 50%;
   left: 200px;
@@ -24,7 +24,7 @@
 
 .cards-image-food {
   background-color: rgba(0,0,0, 0.4);
-  border: 4px solid #25aae1;
+  border: 4px solid #000000;
   position: fixed;
   top: 50%;
   left: 635px;
@@ -38,7 +38,7 @@
 
 .cards-image-calculator {
   background-color: rgba(0,0,0, 0.4);
-  border: 4px solid #25aae1;
+  border: 4px solid #000000;
   position: fixed;
   top: 50%;
   left: 1070px;
@@ -52,7 +52,7 @@
 
 .cards-image-login {
   background-color: rgba(0,0,0, 0.4);
-  border: 4px solid #25aae1;
+  border: 4px solid #000000;
   position: fixed;
   top: 50%;
   left: 1505px;
@@ -69,8 +69,7 @@
   width: 350px;
   position:relative;
   top: 11%;
-  border: 3px solid #25aae1;
-  border-radius: 10px;
+  border: 3px solid #000000;
   opacity: 0.9;
   transition: all 0.5s ease;
 }
@@ -78,36 +77,11 @@
 .photo_cards:hover {
   transform: scale(0.9);
 }
+  
+  h1 {
+    font-size: 50px;
+    font-family: 'Open Sans Condensed';
+    text-transform: uppercase;
+  }
+  
 
-h1 {
-  font-size: 30px;
-  font-weight: 800;
-  line-height: 2;
-  text-align: center;
-  font-family: 'Raleway',sans-serif;
-  color: #ffffff;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
-
-h1::after {
-  position: absolute;
-  width: 45%;
-  top: 11%;
-  left: 33%;
-  margin-left: -5.5%;
-  content: '';
-  border-bottom: 2px solid #ffffff;
-}
-
-.dynamic-text-shadow {
-  text-shadow: .1em .2em .1em hsl(200 50% 30%);
-}
-
-p {
-  color: #eee; 
-  font-family: 'Droid Sans', sans-serif; 
-  font-size: 18px; 
-  font-weight: 800; 
-  line-height: 24px; 
-  margin: 0 0 14px; 
-}
