--- a/frontend/src/components/Home/Body.css
+++ b/frontend/src/components/Home/Body.css
@@ -9,8 +9,8 @@
 }
 
 .cards-image-information {
-  background-color: rgba(0,0,0, 0.4);
-  border: 4px solid #000000;
+  background-color: rgba(0, 0, 0, 0.37);
+  border: 3px solid #000000;
   position: fixed;
   top: 50%;
   left: 200px;
@@ -23,8 +23,8 @@
 }
 
 .cards-image-food {
-  background-color: rgba(0,0,0, 0.4);
-  border: 4px solid #000000;
+  background-color: rgba(0, 0, 0, 0.37);
+  border: 3px solid #000000;
   position: fixed;
   top: 50%;
   left: 635px;
@@ -37,8 +37,8 @@
 }
 
 .cards-image-calculator {
-  background-color: rgba(0,0,0, 0.4);
-  border: 4px solid #000000;
+  background-color: rgba(0, 0, 0, 0.37);
+  border: 3px solid #000000;
   position: fixed;
   top: 50%;
   left: 1070px;
@@ -51,8 +51,8 @@
 }
 
 .cards-image-login {
-  background-color: rgba(0,0,0, 0.4);
-  border: 4px solid #000000;
+  background-color: rgba(0, 0, 0, 0.37);
+  border: 3px solid #000000;
   position: fixed;
   top: 50%;
   left: 1505px;
@@ -69,9 +69,10 @@
   width: 350px;
   position:relative;
   top: 11%;
-  border: 3px solid #000000;
+  border: 2px solid #000000;
   opacity: 0.9;
   transition: all 0.5s ease;
+  border-radius: 20px;
 }
 
 .photo_cards:hover {
@@ -79,9 +80,13 @@
 }
   
   h1 {
-    font-size: 50px;
-    font-family: 'Open Sans Condensed';
+    position: relative;
+    top: 20px;
+    font-size: 25px;
+    font-weight: normal;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-transform: uppercase;
+    letter-spacing: 12px;
   }
   
 
