--- a/frontend/src/components/AboutDiabetes/Basics.css
+++ b/frontend/src/components/AboutDiabetes/Basics.css
@@ -71,3 +71,54 @@
     text-align:center;
     box-shadow: 0 5px 10px rgba(9,0,0,0.5);
   }
+
+  @media screen and (max-width: 900px) {
+
+    .h2-basic {
+      position: relative;
+      perspective: 500px;
+      top: 2%;
+      transform: translateY(-50%);
+      font-weight: 400;
+      font-size: 18px;
+    }
+    
+     .p-basic {
+        position: relative;
+        color: rgb(255, 255, 255);
+        font-weight: 100;
+        font-size: 1.1em;
+        top: 15px;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        line-height: 25px;
+     }
+    
+
+    .box {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 750px;
+      height: 760px;
+      background: #111845a6;
+      box-sizing: border-box;
+      overflow: hidden;
+      box-shadow: 0 20px 50px rgb(23, 32, 90);
+      border: 2px solid #2a3cad;
+      color: white;
+      padding: 20px;
+   }
+  
+   .box:before {
+      content: '';
+      position:absolute;
+      top:0;
+      left:-100%;
+      width:100%;
+      height:100%;
+      background: rgba(255,255,255,0.1);
+      transition:0.6s;
+      pointer-events: none;
+    }
+  }
