--- a/frontend/src/components/Advices/HowTo.css
+++ b/frontend/src/components/Advices/HowTo.css
@@ -8,19 +8,53 @@
     opacity: 0.5;
 }
 
-.border-living {
-    position: relative;
-    width: 1200px;
-    height: 685px;
-    left: 250px;
-    top: 50px;
-    border: 2px solid rgb(8, 157, 243);
-    background-color: rgba(15, 14, 13, 0.534);
-    text-shadow: .1em .2em .1em hsl(200 50% 30%);
-}
+.box-how-to {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1350px;
+    height: 700px;
+    background: #111845a6;
+    box-sizing: border-box;
+    overflow: hidden;
+    box-shadow: 0 20px 50px rgb(23, 32, 90);
+    border: 2px solid #2a3cad;
+    color: white;
+    padding: 20px;
+ }
+
+ .box-how-to:before {
+    content: '';
+    position:absolute;
+    top:0;
+    left:-100%;
+    width:100%;
+    height:100%;
+    background: rgba(255,255,255,0.1);
+    transition:0.6s;
+    pointer-events: none;
+  }
+
+  .box-how-to:hover:before {
+    left:-50%;
+    transform: skewX(-5deg);
+  }
+
+  .box-how-to .content {
+    position:absolute;
+    top:15px;
+    left:15px;
+    right:15px;
+    bottom:15px;
+    border:1px solid #08e1e9;
+    padding:20px;
+    text-align:center;
+    box-shadow: 0 5px 10px rgba(9,0,0,0.5);
+  }
 
 .h2-how-to {
-    font-size: 25px;
+    font-size: 22px;
     font-weight: 800;
     line-height: 2;
     text-align: center;
@@ -29,10 +63,12 @@
   }
 
 .p-how-to {
-    font-size: 1.20em;
+    font-size: 1.10em;
     margin-left: 20px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-right: 20px;
     font-weight: 100;
+    line-height: 24px;
     color: rgb(255, 255, 255);
     cursor:default;
 }
