--- a/frontend/src/components/Advices/FirstAidKit.css
+++ b/frontend/src/components/Advices/FirstAidKit.css
@@ -8,13 +8,66 @@
     opacity: 0.5;
 }
 
-.border-living-first-aid-kit {
-    position: relative;
-    width: 1200px;
-    height: 500px;
-    left: 250px;
-    top: 100px;
-    border: 2px solid rgb(8, 157, 243);
-    background-color: rgba(15, 14, 13, 0.514);
-    text-shadow: .1em .2em .1em hsl(200 50% 30%);
+.box-aid-kit {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1250px;
+    height: 600px;
+    background: #111845a6;
+    box-sizing: border-box;
+    overflow: hidden;
+    box-shadow: 0 20px 50px rgb(23, 32, 90);
+    border: 2px solid #2a3cad;
+    color: white;
+    padding: 20px;
+ }
+
+ .box-aid-kit:before {
+    content: '';
+    position:absolute;
+    top:0;
+    left:-100%;
+    width:100%;
+    height:100%;
+    background: rgba(255,255,255,0.1);
+    transition:0.6s;
+    pointer-events: none;
+  }
+
+  .box-aid-kit:hover:before {
+    left:-50%;
+    transform: skewX(-5deg);
+  }
+
+  .box-aid-kit .content {
+    position:absolute;
+    top:15px;
+    left:15px;
+    right:15px;
+    bottom:15px;
+    border:1px solid #08e1e9;
+    padding:20px;
+    text-align:center;
+    box-shadow: 0 5px 10px rgba(9,0,0,0.5);
+  }
+
+  .h2-aid-kit {
+    font-size: 22px;
+    font-weight: 800;
+    text-align: center;
+    font-family: 'Raleway',sans-serif;
+    color: #ffffff;
+  }
+
+.p-aid-kit {
+    font-size: 1.10em;
+    margin-top: 90px;
+    text-align: center;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 100;
+    line-height: 27px;
+    color: rgb(255, 255, 255);
+    cursor:default;
 }
