--- a/frontend/src/components/Advices/HowTo.css
+++ b/frontend/src/components/Advices/HowTo.css
@@ -72,4 +72,35 @@
     color: rgb(255, 255, 255);
     cursor:default;
 }
+
+@media screen and (max-width: 900px) {
+
+  .box-how-to {
+    position: absolute;
+    top: 49%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 800px;
+    height: 720px;
+    background: #111845a6;
+    box-sizing: border-box;
+    overflow: hidden;
+    box-shadow: 0 20px 50px rgb(23, 32, 90);
+    border: 2px solid #2a3cad;
+    color: white;
+    padding: 20px;
+ }
+
+ .box-how-to:before {
+    content: '';
+    position:absolute;
+    top:0;
+    left:-100%;
+    width:100%;
+    height:100%;
+    background: rgba(255,255,255,0.1);
+    transition:0.6s;
+    pointer-events: none;
+  }
+}
   
