--- a/frontend/src/components/Home/Body.css
+++ b/frontend/src/components/Home/Body.css
@@ -14,7 +14,7 @@
   position: fixed;
   top: 50%;
   left: 200px;
-  height: 600px;
+  height: 570px;
   width: 380px;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -28,7 +28,7 @@
   position: fixed;
   top: 50%;
   left: 635px;
-  height: 600px;
+  height: 570px;
   width: 380px;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -42,7 +42,7 @@
   position: fixed;
   top: 50%;
   left: 1070px;
-  height: 600px;
+  height: 570px;
   width: 380px;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -56,7 +56,7 @@
   position: fixed;
   top: 50%;
   left: 1505px;
-  height: 600px;
+  height: 570px;
   width: 380px;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -86,7 +86,7 @@
     font-weight: normal;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-transform: uppercase;
-    letter-spacing: 12px;
+    letter-spacing: 15px;
   }
   
 @media screen and (max-width: 900px) {
@@ -156,6 +156,16 @@
     z-index: 1;
     text-align: center;
     backdrop-filter: blur(5px);
+  }
+
+  h1 {
+    position: relative;
+    top: 20px;
+    font-size: 20px;
+    font-weight: normal;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 13px;
   }
 }
 
