--- a/frontend/src/components/Advices/HowTo.css
+++ b/frontend/src/components/Advices/HowTo.css
@@ -102,5 +102,16 @@
     transition:0.6s;
     pointer-events: none;
   }
+
+  .p-how-to {
+    font-size: 1em;
+    margin-left: 20px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-right: 20px;
+    font-weight: 100;
+    line-height: 18px;
+    color: rgb(255, 255, 255);
+    cursor:default;
+}
 }
   
