--- a/frontend/src/components/More/Infoline.css
+++ b/frontend/src/components/More/Infoline.css
@@ -223,3 +223,72 @@
     left: 300px;
     bottom: 130px;
   }
+
+  @media screen and (max-width: 900px) {
+    
+    .image-for-infoline-roche {
+      position: fixed;
+      top: 49%;
+      left: 150px;
+      bottom: -100px;
+      width: 380px;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      text-align: center;
+  }
+  
+  .image-for-infoline-ascensia {
+      position: fixed;
+      top: 50%;
+      left: 150px;
+      bottom: 120px;
+      width: 380px;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      text-align: center;
+  }
+  
+  .image-for-infoline-abbott {
+      position: fixed;
+      top: 51%;
+      left: 150px;
+      bottom: 360px;
+      width: 380px;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      text-align: center;
+  }
+  
+  .image-for-infoline-lifescan {
+      position: fixed;
+      top: 52%;
+      left: 150px;
+      bottom: 500px;
+      width: 380px;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      text-align: center;
+  }
+  
+  .image-for-infoline-medtronic {
+      position: fixed;
+      top: 67%;
+      left: 150px;
+      bottom: 680px;
+      width: 380px;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      text-align: center;
+  }
+  
+  .image-for-infoline-bioton {
+      position: fixed;
+      top: 81%;
+      left: 150px;
+      bottom: 680px;
+      width: 380px;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      text-align: center;
+  }
+  }
